Committing all changes from this repo so I can delete this from my machine
Signed-off-by: Matt Oswalt <matt@keepingitclassless.net>

--- a/src/infoblox.conf
+++ b/src/infoblox.conf
@@ -1,6 +1,6 @@
 [Default]
-wapi      = https://infoblox.example.org/wapi/v1.1/
+wapi      = https://10.12.0.15/wapi/v1.1/
 username  = admin
-password  = password
+password  = infoblox
 sslverify = False
 
